Added JavaDoc.